syntax = "proto3";

package protos;

option go_package = "cloudsdk/protos";

message MessageQueue {
  string id = 1;
  string messageBody = 2;
  string receiptHandle = 3;
  string queueUrl = 4;
  int64 timestamp = 5;
  string provider = 6;
}

message MessageQueueList {
  repeated MessageQueue messages = 1;
}
